--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -96,10 +96,11 @@
         "\n",
         "\n",
         "###b) \n",
+        "derive $K(r,\\phi,\\theta;R,\\varphi, \\vartheta )$ in the equivalent integral formula. <br>\n",
+        "we can use the possion integral formula.<br>\n",
+        "The Possion integral formula about 3D interior problem is\n",
         "\n",
-        "The Possion intergral formula about 3D interior problem is\n",
-        "\n",
-        ">$\\displaystyle u(r,\\phi,\\theta) = \\frac{1}{4}\\pi R(R^2-r^2)\\int_0^{2\\pi}\\int_0^\\pi\\frac{\\sin\\varphi}{(R^2+r^2-2Rr\\cos\\alpha)^{1.5}}g(\\varphi,\\vartheta)d\\varphi \\, d\\vartheta$ $\n",
+        ">$\\displaystyle u(r,\\phi,\\theta) = \\frac{1}{4}\\pi R(R^2-r^2)\\int_0^{2\\pi}\\int_0^\\pi\\frac{\\sin\\varphi}{(R^2+r^2-2Rr\\cos\\alpha)^{1.5}}g(\\varphi,\\vartheta)d\\varphi \\, d\\vartheta$ \n",
         "\n",
         "where,\n",
         "\n",
@@ -116,12 +117,16 @@
         "\n",
         "###a)\n",
         "\n",
-        "In this case, it is clear that the solution is independent of $\\phi,\\theta$. so equation reduces to the ODE\n",
+        "In this case, the solution is independent of $\\phi,\\theta$. so equation reduces to the ODE\n",
         "\n",
         ">$\\displaystyle (r^2u_{r})_{r}= -F(r)$ <br>\n",
         ">$\\displaystyle r^2u_{r}= \\int_0^R-F(r)dr$<br>\n",
         ">$\\displaystyle u_{r}=\\frac{1}{r^2}\\int_0^R-F(r)dr$<br>\n",
         ">$\\displaystyle u(r)=\\int_0^R\\frac{1}{r^2}\\int_0^R-F(r)drdr $\n",
+        "\n",
+        "###b)\n",
+        "derive $G(r,\\phi,\\theta;\\rho ,\\varphi ,\\vartheta )$ in the equivalent integral formula <br>\n",
+        "$u(r,\\phi,\\theta)=\\int_{0}^{2\\pi}\\int_{0}^{pi}\\int_{0}^{R}G(r,\\phi,\\theta;\\rho ,\\varphi ,\\vartheta )F(\\rho ,\\varphi ,\\vartheta)\\rho^{2}sin\\varphi d\\rho d\\varphi d\\vartheta $\n",
         "\n",
         "\n",
         "\n",
