--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -91,8 +91,8 @@
         "So, solution is\n",
         "\n",
         ">$\\displaystyle u(r,\\phi,\\theta) = \\sum_{l=0}^\\infty\\sum_{m=0}^l (A_lr^l+B_lr^{-l-1})P_l^m(\\cos\\phi)[S_l^m\\sin(m\\theta)+C_l^m\\cos(m\\theta)] $\n",
-        "$\\equiv \\sum_{l=0}^{\\infty }\\sum_{m=0}^{l}(A_{l}r^{l}+B_{l}r^{-l-1})\\times [S_{l}^{m}Y_(l)^{m(0)}(\\theta,\\phi )+C_{l}^{m}Y_(l)^{m(e)}(\\theta,\\phi) ]$\n",
-        "\n",
+        "$\\equiv \\sum_{l=0}^{\\infty }\\sum_{m=0}^{l}(A_{l}r^{l}+B_{l}r^{-l-1})\\times [S_{l}^{m}Y_(l)^{m(0)}(\\theta,\\phi )+C_{l}^{m}Y_(l)^{m(e)}(\\theta,\\phi) ]$ <br>\n",
+        "where m and n are positive integers and n<m+1\n",
         "\n",
         "\n",
         "###b) \n",
